--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -2,15 +2,11 @@
 @use 'mixin' as*;
 
 .main-content {
-    // width: 60%;
-    // margin: 0 auto;
+    width: 70%;
+    margin: 1rem auto;
 }
 
 .banner {
-    // position: relative;
-    // left: 0;
-    // right: 0;
-    // width: 100vw;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -23,11 +19,6 @@
 .banner h1 {
     position: absolute;
     text-align: center;
-}
-
-.banner h1 {
-    // left: 5rem;
-    // top: 3rem;
 }
 
 .banner-h2 {
